Remove: some old projects

--- a/home.html
+++ b/home.html
@@ -237,117 +237,7 @@
 				<div id="bottomBox">
 					<span class="display-3 projParaText"></span>
 					<span id="projectNavSpot"></span>
-					<div id="projectBoxes1" class="row">
-						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
-							<a href="#" class="modalBtn" data-modal="project11Name">
-								<div class="card">
-									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/TbSBWFc.jpg" alt="Card image cap">
-									<div class="card-body">
-										<div class="card-title text-center display-5 paraText">AutoPilot - <span id="colorIt">JS</span></div>
-									</div>
-								</div>
-							</a>
-							<div class="modal" id="project11Name">
-								<div class="modal-sandbox"></div>
-								<div class="modal-box">
-									<div class="modal-header">
-										<h1 class="projectModalHeaders">Auto Pilot</h1>
-									</div>
-									<div class="modal-body">
-										<div id="carouselAutoPilotIndicators" class="carousel slide">
-											<ol class="carousel-indicators">
-												<li data-target="#carouselAutoPilotIndicators" data-slide-to="0" class="active"></li>
-												<li data-target="#carouselAutoPilotIndicators" data-slide-to="1"></li>
-												<li data-target="#carouselAutoPilotIndicators" data-slide-to="2"></li>
-											</ol>
-											<div class="carousel-inner">
-												<div class="carousel-item active">
-													<p class="paraText">
-														In this two part script, the first script takes in a text file with URLs you want to be scraped.
-													</p>
-													<img class="d-block" src="https://media.giphy.com/media/PMl0k6dA7eC06EQRqU/giphy.gif" alt="First slide">
-												</div>
-												<div class="carousel-item">
-													<p class="paraText">
-														With the results from script one, it decodes the string and parses it into a CSV
-													</p>
-													<img class="d-block" src="https://media.giphy.com/media/Zvn2ZRUrG714RmPv8u/giphy.gif" alt="Second slide">
-												</div>
-												<div class="carousel-item">
-													<p class="paraText">
-														The final product shows all the desired values and last columns compares results to a mapping.
-													</p>
-													<img class="d-block" src="https://media.giphy.com/media/3eP5pCglzacolFG1RA/giphy.gif" alt="Third slide">
-												</div>
-											</div>
-											<a class="carousel-control-prev" href="#carouselAutoPilotIndicators" role="button" data-slide="prev">
-												<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-												<span class="sr-only">Previous</span>
-											</a>
-											<a class="carousel-control-next" href="#carouselAutoPilotIndicators" role="button" data-slide="next">
-												<span class="carousel-control-next-icon" aria-hidden="true"></span>
-												<span class="sr-only">Next</span>
-											</a><br />
-											<h2>Tech Stack</h2>
-											<ul class="list-group">
-												<li class="list-group-item paraText">
-													Javascript
-												</li>
-												<li class="list-group-item paraText">
-													CasperJS
-												</li>
-											</ul>
-										</div><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/QA-Tool">Github Link</a><br />
-										<button class="close-modal">Close!</button>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
-							<a href="#" class="modalBtn" data-modal="project12Name">
-								<div class="card">
-									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
-									<div class="card-body">
-										<div class="card-title text-center display-5 paraText">Pubdemo Clone- <span id="colorIt">MEN</span></div>
-									</div>
-								</div>
-							</a>
-							<div class="modal" id="project12Name">
-								<div class="modal-sandbox"></div>
-								<div class="modal-box">
-									<div class="modal-header">
-										<h1 class="projectModalHeaders">Pubdemo Clone</h1>
-									</div>
-									<div class="modal-body">
-										<p class="paraText">
-											This is a remake of an existing project with ExpressJS for educational purposes. The site's main objective is to help new publishers onboard with our ad flow and layout. It allows for new publishers to traverse through possible layouts per site section. <br />
-										</p>
-										<h2>Tech Stack</h2>
-										<ul class="list-group">
-											<li class="list-group-item paraText">
-												ExpressJS
-											</li>
-											<li class="list-group-item paraText">
-												NodeJS
-											</li>
-											<li class="list-group-item paraText">
-												JQuery
-											</li>
-											<li class="list-group-item paraText">
-												MongoDB (mLabs)
-											</li>
-											<li class="list-group-item paraText">
-												Heroku
-											</li>
-										</ul><br />
-										<a class="paraTextGH" target="_blank" href="http://pubdemo.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/pubdemo">Github Link</a> <br />
-										<button class="close-modal">Close!</button>
-									</div>
-								</div>
-							</div>
-						</div>
+					<div id="projectBoxes1" class="row">	
 						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project13Name">
 								<div class="card">
@@ -383,7 +273,6 @@
 											</li>
 										</ul><br />
 										<a class="paraTextGH" target="_blank" href="https://crowdscore.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/crowdscore">Github Link</a><br />
 										<button class="close-modal">Close!</button>
 									</div>
 								</div>
@@ -432,7 +321,6 @@
 												Box
 											</li>
 										</ul><br />
-										<a class="paraTextGH" target="_blank" href="https://gist.github.com/rchen016/03624205a8cc1d3026745909ffb24ee0">Github Link</a><br />
 										<button class="close-modal">Close!</button>
 									</div>
 								</div>
@@ -440,10 +328,10 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project21Name">
-								<div class="card" style="width>:100%;">
+								<div class="card" style="width:100%;">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/pr2j46R.png" alt="Card image cap">
 									<div class="card-body">
-										<div class="card-title text-center display-5 paraText">This Webiste - <span id="colorIt">HTML | CSS</span></div>
+										<div class="card-title text-center display-5 paraText">This Webiste - <span id="colorIt">HTML  JS  CSS</span></div>
 									</div>
 								</div>
 							</a>
@@ -463,10 +351,12 @@
 												HTML
 											</li>
 											<li class="list-group-item paraText">
+												JavaScript
+											</li>
+											<li class="list-group-item paraText">
 												CSS
 											</li>
 										</ul><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/profilesite">Github Link</a><bR />
 										<button class="close-modal">Close!</button>
 									</div>
 								</div>
@@ -510,131 +400,25 @@
 											</ul>
 										</p><br />
 										<a class="paraTextGH" target="_blank" href="https://myfitnesshomie.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/fitnessApp">Github Link</a> <br />
-										<button class="close-modal">Close!</button>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
-							<a href="#" class="modalBtn" data-modal="project23Name">
-								<div class="card">
-									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/RT95QLh.jpg" alt="Card image cap">
-									<div class="card-body">
-										<div class="card-title text-center display-5 paraText">Carmelo Homage- <span id="colorIt">MEN</span></div>
-									</div>
-								</div>
-							</a>
-							<div class="modal" id="project23Name">
-								<div class="modal-sandbox"></div>
-								<div class="modal-box">
-									<div class="modal-header">
-										<h1 class="projectModalHeaders">Carmelo Homage</h1>
-									</div>
-									<div class="modal-body">
-										<p class="paraText">
-											This website was for fun where I am displaying the accolades of my favorite NBA player Carmleo. (Retiring soon) <br />
-											<h2>Tech Stack</h2>
-											<ul class="list-group">
-												<li class="list-group-item paraText">
-													ExpressJS
-												</li>
-												<li class="list-group-item paraText">
-													NodeJS
-												</li>
-												<li class="list-group-item paraText">
-													MongoDB (mLabs)
-												</li>
-												<li class="list-group-item paraText">
-													Heroku
-												</li>
-											</ul>
-										</p><br />
-										<a class="paraTextGH" target="_blank" href="https://carmeloblog.herokuapp.com/blogs">Site (Slow initial load because free Heroku)</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/blogApp">Github Link</a> <br />
-										<button class="close-modal">Close!</button>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
-							<a href="#" class="modalBtn" data-modal="project24Name">
-								<div class="card">
-									<img class="card-img-top cardProjectImage" src="https://images.unsplash.com/photo-1536312975196-2f175c3c0eed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=943&q=80" alt="Card image cap">
-									<div class="card-body">
-										<div class="card-title text-center display-5 paraText">Messenger App Demo - <span id="colorIt">MEN</span> </div>
-									</div>
-								</div>
-							</a>
-							<div class="modal" id="project24Name">
-								<div class="modal-sandbox"></div>
-								<div class="modal-box">
-									<div class="modal-header">
-										<h1 class="projectModalHeaders">Chatter</h1>
-									</div>
-									<div class="modal-body">
-										<p class="paraText">
-											This is a website that I implemented to learn bidirectional and event-based communication. It's a simple texting app with all the essential features of credentials/friendlist/messaging.<br />
-											<h2>Tech Stack</h2>
-											<ul class="list-group">
-												<li class="list-group-item paraText">
-													ExpressJS
-												</li>
-												<li class="list-group-item paraText">
-													NodeJS
-												</li>
-												<li class="list-group-item paraText">
-													Socketio
-												</li>
-												<li class="list-group-item paraText">
-													MongoDB (mLabs)
-												</li>
-												<li class="list-group-item paraText">
-													Heroku
-												</li>
-											</ul>
-										</p><br />
-										<a class="paraTextGH" target="_blank" href="https://chattertexting.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/chatter">Github Link</a> <br />
 										<button class="close-modal">Close!</button>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div><!---->
-
 				</div>
 			</section>
 			</div>
 			<footer id="foot" class="bg-light botFooter">
 				<div id="footStyle" class="row justify-content-center align-items-center">
 					<div class="footDesc">
-						<span class="footInfo">&copy; 2020 Ricky Chen</span>
+						<span class="footInfo">&copy; <script>document.write(/\d{4}/.exec(Date())[0])</script> Ricky Chen</span>
 						<span class="footInfo"><a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a></span>
 						<span class="footInfo"><a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a></span>
-
-					  <!-- <ul class="list-inline">
-						<li class="socialMedia list-inline-item">&copy; 2020 Ricky Chen</li>
-						<li class="socialMedia list-inline-item"><a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a></li>
-						<li class="socialMedia list-inline-item"><a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a></li>
-						 <li class="socialMedia list-inline-item">All rights reserved.</li>
-						<li class="socialMedia list-inline-item">Terms of use and privacy policy</li>
-					  </ul> -->
-					  <!-- <div class="socialMedia">
-						  <a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
-						  <a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
-					  </div> -->
 					</div>
-					<!-- <div class="col-md-6">
-						<div class="socialMedia">
-							<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
-							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
-						</div>
-					</div> -->
 				</div>
 			</footer>
 		<!-- Bootstrap -->
-		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" crossorigin="anonymous"></script>-->
 		<script src="./js/modal.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
